# signature-scan-patcher

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-single-platform.yml
src/: _main.cpp  patterns.cpp  version.rc
